[package]
name = "nft_storage_api"
version = "1.1.0"
authors = ["OpenAPI Generator team and contributors", "serinuntius"]
description = "A Rust client for interacting with the NFT.storage service, providing a user-friendly wrapper around its API. It facilitates operations such as storing ERC-1155 compatible NFTs, uploading files, managing digital assets, and handling decentralized identities (DIDs). Built with async support for seamless integration with modern Rust applications."
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2018"
homepage = "https://github.com/noplan-inc/nft.storage-rs"
repository = "https://github.com/noplan-inc/nft.storage-rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = "1.33.0"
tokio-util = "0.7.10"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart", "stream"]
