[package]
name = "nft_storage_cli"
version = "0.1.0"
edition = "2021"
authors = ["serinuntius"]
license = "MIT"
homepage = "https://github.com/noplan-inc/nft.storage-rs"
repository = "https://github.com/noplan-inc/nft.storage-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
nft_storage_core = { path = "../nft_storage_core", version = "0.1.0" }
nft_storage_api = { path = "../nft_storage_api", version = "1.0.0" }
clap = { version = "4.4.7", features = ["env", "derive"] }
serde_json = { version = "1.0.108" }
directories = "5.0.1"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }