[package]
name = "nft_storage_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft_storage_api = { path = "../nft_storage_api" }
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1.0.50"
async-trait = "0.1.74"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8.5"