[package]
name = "nft_storage_core"
version = "0.1.0"
edition = "2021"
authors = ["serinuntius"]
description = "A Rust client tailored for NFT.storage, providing an intuitive API wrapper for enhanced interaction with the service. It supports storing ERC-1155 compatible NFTs, encrypted file uploads with pluggable encryption modules, asset management, and decentralized identity (DID) handling. The client also enables encrypted downloads and decryption, ensuring secure data handling. It's designed with async capabilities to integrate smoothly into contemporary Rust async ecosystems."
license = "MIT"
homepage = "https://github.com/noplan-inc/nft.storage-rs"
repository = "https://github.com/noplan-inc/nft.storage-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft_storage_api = { path = "../nft_storage_api", version = "0.1.0" }
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1.0.50"
async-trait = "0.1.74"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
futures = "0.3.29"